--- a/scripts/Development/JupyterNotebooks/ConfigFiles/FossConfig.json
+++ b/scripts/Development/JupyterNotebooks/ConfigFiles/FossConfig.json
@@ -1,5 +1,6 @@
 {
     "inst":"FOSS",
     "analysis":["PORT-BORIC"],
-    "lab":["Crete","Gainsville"]
+    "lab":["Gainsville"],
+    "mode":"test"
 }
