--- a/scripts/Development/PyCharmFiles/PrasingScript/ConfigFiles/DumathermConfig.json
+++ b/scripts/Development/PyCharmFiles/PrasingScript/ConfigFiles/DumathermConfig.json
@@ -1,5 +1,5 @@
 {
     "inst":"Dumatherm",
     "analysis":["PROT-COMII","PROT-HICOM"],
-    "lab":[ "Crete","Gainsville"]
+    "lab":[ "Gainsville"]
 }
